tests/invalid/RecursiveType_Invalid_2.whiley

type nat is (int n) where n >= 0

type expr is nat | {int op, expr left, expr right}

function f(expr e) -> expr:
    return e

method main() -> expr:
    return f(-1)
